gcc/testsuite/rust/rustc/ui/test-attrs/test-warns-dead-code.rs
// compile-flags: --test

#![deny(dead_code)]

fn dead() {} // { dg-error "" "" { target *-*-* } }

fn main() {}

